# my-zindi

./: README.md  essential-steps.md  pyproject.toml
competitions/financial-inclusion-in-africa/: README.md  my-solution-final.ipynb  my-solution.ipynb  my-trial-solution.ipynb  predictions.csv  solution.py
competitions/financial-inclusion-in-africa/data/: StarterNotebook.ipynb
competitions/tanzania-tourism-prediction/: README.md  solution.ipynb  solution.py
competitions/wildfire-prediction-challenge/: Fighting_Fire_with_Data_Starter_Notebook.ipynb
playground/: random_forest.py  random_forest_missing_values.py  random_forest_with_categoricals.py
src/my_zindi/financial-inclusion-in-africa/: my-solution.ipynb
src/my_zindi/wildfire-prediction-challenge/: INFO.md  starter_submission.csv
