[project]
name = "my-zindi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Antony Nyagah", email = "tony.m.nyagah@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=2.0.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.1",
    "lightgbm>=4.4.0",
    "scikit-learn>=1.5.1",
    "jupyterlab>=4.2.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
