[project]
name = "my-zindi"
version = "0.1.0"
description = "My solutions to Zindi competitions"
authors = [{ name = "Antony Nyagah", email = "tony.m.nyagah@gmail.com" }]
dependencies = [
    "jupyterlab>=4.3.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "isort>=5.13.2",
    "ruff>=0.7.1",
]
