[project]
name = "my-zindi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Antony Nyagah", email = "tony.m.nyagah@gmail.com" },
]
dependencies = [
    "jupyterlab>=4.3.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "lightgbm>=4.5.0",
    "xgboost>=2.1.3",
    "catboost>=1.2.5",
]
readme = "README.md"
requires-python = "==3.12.*"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "ruff>=0.8.6",
]
